Moved relevant source from indigo-examples