@@ -23,14 +23,18 @@ repositories {
 
 dependencies {
   compile 'org.slf4j:slf4j-api:1.7.6'
-  compile 'com.obsidiandynamics.indigo:indigo-core:0.9.1'
+  compile 'com.obsidiandynamics.indigo:indigo-core:0.9.2'
+  compile 'com.google.code.gson:gson:2.8.0'
+  compile 'org.danilopianini:gson-extras:0.2.1'
+  compile 'org.eclipse.jetty.websocket:websocket-server:9.4.5.v20170502'
+  compile 'org.eclipse.jetty.websocket:websocket-client:9.4.5.v20170502'
+  compile 'io.undertow:undertow-core:1.4.15.Final'
+  compile 'io.undertow:undertow-websockets-jsr:1.4.15.Final'
+  compile 'io.netty:netty-all:4.1.11.Final'
+  runtime 'org.slf4j:slf4j-log4j12:1.7.6'
+  runtime 'log4j:log4j:1.2.17'
   
-  testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.1'
-  testCompile 'org.awaitility:awaitility:3.0.0'
-  testCompile 'junit:junit:4.12'
-  testCompile 'org.apache.commons:commons-math3:3.2'
-  testCompile 'org.awaitility:awaitility:3.0.0'
-  testCompile 'org.mockito:mockito-core:1.9.5'
+  testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.2'
 }
 
 jacoco {
@@ -45,25 +49,29 @@ jacocoTestReport {
   }
 }
 
+def envUser = 'BINTRAY_USER'
 def envKey = 'BINTRAY_KEY'
-
 task bintrayCredentialsCheck {
   doLast {
+    if (System.getenv(envUser) == null) {
+      throw new GradleException("No Bintray username specified; set with 'export ${envUser}=<username>'")
+    }
     if (System.getenv(envKey) == null) {
       throw new GradleException("No Bintray key specified; set with 'export ${envKey}=<key>'")
     }
   }
 }
 
+def packageDesc = 'A simple, fast, WebSocket-based IoT message broker'
 bintray {
-  user = 'ekoutanov'
+  user = System.getenv(envUser)
   key = System.getenv(envKey)
   publications = ['mavenJava']
   pkg {
     repo = 'flywheel'
     name = packageName
     userOrg = 'william-hill-community'
-    desc = 'A simple, fast, WebSocket-based IoT message broker'
+    desc = packageDesc
     websiteUrl = 'https://github.com/william-hill-community/flywheel'
     licenses = ['BSD New']
     vcsUrl = 'https://github.com/william-hill-community/flywheel.git'
@@ -73,7 +81,7 @@ bintray {
     publish = false
     version {
       name = packageVersion
-      desc = 'A simple, fast, WebSocket-based IoT message broker'
+      desc = packageDesc
       released  = new Date()
       vcsTag = packageVersion
     }
@@ -119,4 +127,38 @@ publishing {
       url "${project(':').projectDir}/../repo"
     }
   }
+}
+
+def perfJvmArgs = '-server -XX:-MaxFDLimit -XX:+TieredCompilation -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -Xms1G -Xmx4G -Xss1M -XX:+UseParallelGC'
+
+task fanOutBench(type: JavaExec) {
+  classpath = sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
+  jvmArgs = Arrays.asList perfJvmArgs.split(' ')
+  main = 'au.com.williamhill.flywheel.socketx.FanOutBenchmark'
+}
+
+task rigBench(type: JavaExec) {
+  classpath = sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
+  jvmArgs = Arrays.asList perfJvmArgs.split(' ')
+  main = 'au.com.williamhill.flywheel.rig.RigBenchmark'
+}
+
+task edgeRigBench(type: JavaExec) {
+  systemProperties = System.properties
+  classpath = sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
+  jvmArgs = Arrays.asList perfJvmArgs.split(' ')
+  main = 'au.com.williamhill.flywheel.rig.EdgeRigBenchmark'
+}
+
+task remoteRigBench(type: JavaExec) {
+  systemProperties = System.properties
+  classpath = sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
+  jvmArgs = Arrays.asList perfJvmArgs.split(' ')
+  main = 'au.com.williamhill.flywheel.rig.RemoteRigBenchmark'
+}
+
+task beaconServer(type: JavaExec) {
+  systemProperties = System.properties
+  classpath = sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
+  main = 'au.com.williamhill.flywheel.beacon.BeaconServer'
 }
